--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.18.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
